UNRELEASED:

2022-04-26:

- Added 'Ko-Fi', 'Mastodon', 'Mozilla Addons', 'Telegram' and 'Wikipedia' to account list.
- Updated 'Twitter: Primary' entry to reflect my migration to Mastodon.
- Removed 'Twitter: The Records of Dr Sullivan' from account list, as the account has been deactivated.
- Fixed 'Wordsmith' not displaying in account list.
- Fixed missing link to 'Wikipedia' account and missing link to Twitch on 'Stream Archive' entry.
- Moved account entries to `accounts.json` data file.
- Added link to my Gender & Sexuality Spectrum on Identity page.
- Added an invisible link to my Mastodon account to the home page to verify with Mastodon that this website is mine.
- Fixed a typo in the 'Codeberg' account profile, and another on the Home page.
- Reduced code duplication in `toggle_children()` function of `accounts.js`.
- Removed trailing `.html` in the link to the Poetry page from the Writing page.

2022-04-19:

- Added 'Hardlimit' accounts to the Accounts page.
- Fixed overflow occurring on pages that shouldn't have enough content to trigger one. (Thanks @TimJentzsch on GitHub!)
    - Removed `empty.css`, as it is no longer needed due to this fix.
- Fixed 'Go to account' button for NexusMods directing to a specific mod instead of my account profile.
- Adjusted width of 'Go to account' buttons, keeping the text on one line for browser minimum font sizes up to 15px.
- Adjusted positioning of account list so that longer website names to do not flow over the boundaries of the page container.
- Adjusted size of pronouns.page banner and positioning of footer on `identity.html`, removing overflow on 1080p+ without significantly reducing image size.
- Deleted all external favicons now that they are no longer used.
- Removed mention of external favicons on Legal page.

2022-04-18:

- Completely revamped the Accounts page.
    - Added a list of accounts to choose from the side, instead of showing all descriptions at once in one huge list.