@@ -1,4 +1,432 @@
-var accs = {};
+var accounts = {};
+var accountsJSON = {
+    "info": {
+        "header": "Accounts",
+        "elements": [
+            {
+                "type": "paragraph",
+                "content": "Here you can find an alphabetical list of navigation links to my various internet accounts, accompanied by short explanations of what I generally do with them.\n\nClick on an item on the list to the right to view information about that account. 'Info' displays this page.\n\nOn each account's information page you will find a single-letter code representing its level of activity. They are as follows:"
+            },
+            {
+                "type": "list",
+                "items": [
+                    "(A): active.",
+                    "(P): periodically active (can be sporadic or for specific regular time periods).",
+                    "(D): dormant; inactive but with the intent of becoming active in the future.",
+                    "(I): inactive for the forseeable future."
+                ]
+            },
+            {
+                "type": "paragraph",
+                "content": "If an account does not appear in this list, that does not <i>necessarily</i> mean it is not mine, but you should check before assuming so."
+            }
+        ]
+    },
+    "allpoetry": {
+        "header": "AllPoetry (P)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://allpoetry.com/Murdo_Maclachlan"
+            },
+            {
+                "type": "paragraph",
+                "content": "AllPoetry is a large poetry-sharing website and one of my favourite places on the internet. I joined the site on the 1st of October 2018 and have been active intermittently ever since.\n\nAt the moment, activity on this account is rather sporadic. Although I love poetry and this site with all my heart, I'm currently focusing much more on prose than poetry. I still come back and write a poem or two every now and then, and hopefully I can be more active again here in the future.\n\nFor examples of my poetry, either click the 'Go to account' button above, or see <a href=\"writing/poetry.html\">here</a> for some selected pieces."
+            }
+        ]
+    },
+    "belletristica": {
+        "header": "Belletristica (D)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://belletristica.com/en/users/14865-murdo-maclachlan#profile"
+            },
+            {
+                "type": "paragraph",
+                "content": "The search for a good Wattpad alternative is a long one, but Belletristica looks like a good candidate. Currently dormant, I hope to get writing prose on this site as soon as I have the time. Watch this space!"
+            }
+        ]
+    },
+    "codeberg": {
+        "header": "Codeberg (A)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://codeberg.org/MurdoMaclachlan"
+            },
+            {
+                "type": "paragraph",
+                "content": "Since moving from GitHub, my primary repository hosting website, and the <a href=\"https://codeberg.org/MurdoMaclachlan/pages\">main host for this site</a>, has been Codeberg. Feel free to pop over, have a look at the source for this site, and browse my other repositories or even contribute if you want.\n\nMost of my activity on Codeberg involves the development of some Python projects related to the <a href=\"https://www.reddit.com/r/TranscribersOfReddit\">Transcribers of Reddit</a>, as well as the maintenance of a collection of transcriptions templates for common memes and reposts."
+            }
+        ]
+    },
+    "deviantart": {
+        "header": "DeviantArt (I)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://www.deviantart.com/mbmaclachlan"
+            },
+            {
+                "type": "paragraph",
+                "content": "I joined DeviantArt  in 2018 and only ever uploaded a few sketches, none of which are very good. My favourite is my <a href=\"https://www.deviantart.com/mbmaclachlan/art/Bastard-Sword-Sketch-841019527\">bastard sword sketch</a>.\n\nAll of the sketches are licensed under Creative Commons Attribution Share-Alike Version 3, so feel free to use them as long as you credit me and use the same license. I'm not that bothered about the drawings but I am bothered about people respecting copyleft license terms."
+            }
+        ]
+    },
+    "discord": {
+        "header": "Discord (A)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://discord.com/users/234960566278553600"
+            },
+            {
+                "type": "paragraph",
+                "content": "I use Discord for a lot of my communication purposes. My account is Murdo#0949, but be warned that I don't generally accept friend requests from people I haven't already got to know.\n\nDiscord is not the place to message me if you are looking to contact me about something. For that, use the contact link in the footer of this website, or alternatively message me on the relevant account, if there is one."
+            }
+        ]
+    },
+    "github": {
+        "header": "GitHub (A)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://github.com/MurdoMaclachlan"
+            },
+            {
+                "type": "paragraph",
+                "content": "This whole website is available <a href=\"https://github.com/MurdoMaclachlan/website\">open-source on GitHub</a> as a push mirror for the Codeberg host.\n\nAs with Codeberg, most of my activity on GitHub involves the development of some Python projects related to the <a href=\"https://www.reddit.com/r/TranscribersOfReddit\">Transcribers of Reddit</a>, as well as the maintenance of a collection of transcriptions templates for common memes and reposts.\n\nI also occasionally bug hunt on programs I personally make use of, but that's rare.\n\nI no longer use GitHub as much as I used to, but most of my repositories on Codeberg do have GitHub push mirrors -- just don't open issues on GitHub if there's a codeberg alternative, as I prefer to have things managed over here, farther from corporate hands."
+            }
+        ]
+    },
+    "hardlimit-archive": {
+        "header": "Hardlimit: Stream Archive (A)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://video.hardlimit.com/c/mmaclachlanarchive"
+            },
+            {
+                "type": "paragraph",
+                "content": "This Hardlimit channel is an archive for all of my past <a href=\"https://www.twitch.tv/murdomaclachlan\">Twitch streams</a>.\n\n    My Hardlimit channels are mirrors of my YouTube channels; I created them to provide access to my videos via the decentralised Peertube network and do discourage dependency on Google.\n\n    I'm yet to export any archived streams, as exporting videos takes a while, but I will begin doing so soon."
+            }
+        ]
+    },
+    "hardlimit-main": {
+        "header": "Hardlimit: Primary (P)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://video.hardlimit.com/c/murdomaclachlan/"
+            },
+            {
+                "type": "paragraph",
+                "content": "The content on my primary YouTube account is fairly varied. So far I've uploaded mainly clips and highlights from my Twitch streams, but there is also a small amount of music, a mod comparison, and really anything that pops into my head.\n\nMy Hardlimit channels are mirrors of my YouTube channels; I created them to provide access to my videos via the decentralised Peertube network and do discourage dependency on Google.\n\nBelow is an example of one of my highlights videos:"
+            },
+            {
+                "type": "iframe",
+                "link": "https://video.hardlimit.com/videos/embed/926671e7-0c3c-42db-81b4-909c1c813732",
+                "title": "Hardlimit video player"
+            }
+        ]
+    },
+    "kofi": {
+        "header": "Ko-Fi (D)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://ko-fi.com/murdomaclachlan"
+            },
+            {
+                "type": "paragraph",
+                "content": "I feel a little bad putting this account on here since it feels like begging for money when I'm not actively streaming, uploading videos, modding or publishing writing, but this is supposed to be a link of all my accounts, so here it is. Don't donate at the moment."
+            }
+        ]
+    },
+    "linuxquestions": {
+        "header": "LinuxQuestions (P)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://www.linuxquestions.org/questions/user/murdo-1234055/"
+            },
+            {
+                "type": "paragraph",
+                "content": "LinuxQuestions.org is a forum hub for Linux, unsurprisingly. You won't find that much in the way of activity from me; I mainly just lurk conversations in order to stay in the loop. When I do post, it's often about Pipewire or Wayland, and it's always Slackware-related, as that's the only distrobution, and indeed the only operating system, I've ever used."
+            }
+        ]
+    },
+    "mastodon": {
+        "header": "Mastodon (A)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://mastodon.online/@murdomaclachlan"
+            },
+            {
+                "type": "paragraph",
+                "content": "My Mastodon account is brand new, but I'm hoping it will be far more active than my Twitter account was. I finally migrated from Twitter because of Elon Musk's purchase of the site, but it had been my intent to do so for some time; Twitter was too political, and politics was pretty much all I saw there.\n\nI hope Mastodon will provide me with the environment I need to be able to post about things that actually interest me and bring me joy, and thus everyone will be a lot better off for it. And it's open source and decentralised, which is always a plus in my book."
+            }
+        ]
+    },
+    "movellas": {
+        "header": "Movellas (D)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://movellas.com/movellian/MurdoMaclachlan"
+            },
+            {
+                "type": "paragraph",
+                "content": "The search for a good Wattpad alternative is a long one, but Movellas looks like a good candidate. Currently dormant, I hope to get writing prose on this site as soon as I have the time. Watch this space!"
+            }
+        ]
+    },
+    "mozilla": {
+        "header": "Mozilla Addons (I)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://addons.mozilla.org/en-GB/firefox/user/16624319/"
+            },
+            {
+                "type": "paragraph",
+                "content": "I've made a grand total of one (1) addon for Mozilla Firefox; a theme called <a href=\"https://addons.mozilla.org/en-GB/firefox/addon/soft-topaz-highlights/\">Soft Topaz Highlights</a>, which I still personally use. I don't know if I'll ever make any more themes or any proper addons. Possibly, but probably not any time soon, so I consider this account inactive."
+            }
+        ]
+    },
+    "musescore": {
+        "header": "MuseScore (I)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://musescore.com/murdomaclachlan"
+            },
+            {
+                "type": "paragraph",
+                "content": "You won't find any of my compisitions on here. I made my MuseScore account so that I could use their forums, posted twice, favourited 'The Swan', and never looked back. I might post something at some point, I might not. For the forseeable future, consider it inactive."
+            }
+        ]
+    },
+    "nanowrimo": {
+        "header": "NaNoWriMo (P)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://nanowrimo.org/participants/murdomaclachlan"
+            },
+            {
+                "type": "paragraph",
+                "content": "NaNoWriMo - National Novel Writing Month. Also known as November. The challenge is to write 50,000 words of a new novel or novella. Or write 50,000 words of one you've already written part of; it's flexible. In 2021, I attempted it for the first time and completed it! Since, I've written almost nothing in that novel, but I liked what I wrote and I'll probably continue it in 2022.\n\nEvery November, this account should become active. I loved NaNoWriMo in 2021 and will no doubt love it again in 2022. It's a great way to make sure I write, especially since that's during university, which is when I have the most trouble making myself write."
+            }
+        ]
+    },
+    "nexusmods": {
+        "header": "NexusMods (P)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://www.nexusmods.com/users/79190763"
+            },
+            {
+                "type": "paragraph",
+                "content": "Periodically-active in terms of support and dormant in terms of new mods, I occasionally hop on here to see if there are any questions needing answered about the few mods I've published. I would love to get back to modding at some point, although I've encountered confusing obstacles with one mod I was trying to make.\n\nMy most popular mod on Nexus is for the Witcher 3: <a href=\"https://www.nexusmods.com/witcher3/mods/4232\">No Dismemberments or Finishers</a>, which disables some of the more gratuitously violent aspects of the game. However, I'm personally far more invested in my <a href=\"https://www.nexusmods.com/legendofgrimrock2/mods/136\">Grimrock</a> <a href=\"https://www.nexusmods.com/legendofgrimrock2/mods/140\">imports</a>, bringing enemies from the first game into the second one for use in custom dungeons."
+            }
+        ]
+    },
+    "reddit": {
+        "header": "Reddit (A)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://old.reddit.com/user/MurdoMaclachlan"
+            },
+            {
+                "type": "paragraph",
+                "content": "Probably my most active account besides Discord, I mainly use my Reddit account for <a href=\"endeavours#transcribing\">transcribing</a>.\n\nIn my early days on Reddit, I would mainly post to <a href=\"https://www.reddit.com/r/worldbuilding\">r/worldbuilding</a>, but since joining the Transcribers I've done little else. I don't post to r/worldbuilding these days, as I'm trying to focus fully on writing stories rather than getting carried away in world after world."
+            }
+        ]
+    },
+    "steam": {
+        "header": "Steam (A)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://steamcommunity.com/id/murdomaclachlan"
+            },
+            {
+                "type": "paragraph",
+                "content": "I used to use Steam all the time, but I've since become more engaged with other things and don't have as much time for video games any more. I'd love to get back to playing them, though, especially since I'm a bit of a completionist and there are many achievements I never got and games I never finished!\n\nOn the topic of achievements, I have a couple of Steam achievement hunting accounts:"
+            },
+            {
+                "type": "list",
+                "items": [
+                    "<a href=\"https://completionist.me/steam/profile/76561198249827228\">Completionist.me</a>",
+                    "<a href=\"https://steamhunters.com/id/mmaclachlan/games\">Steam Hunters</a>"
+                ]
+            }
+        ]
+    },
+    "telegram": {
+        "header": "Telegram (A)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://t.me/MurdoMaclachlan"
+            },
+            {
+                "type": "paragraph",
+                "content": "I haven't used my Telegram account for much yet, as it's very new, but this is another avenue through which you can contact me if you need to. Just bear in mind I will probably be slower to respond than with many other accounts."
+            }
+        ]
+    },
+    "tumblr": {
+        "header": "Tumblr (D)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://murdomaclachlan.tumblr.com/"
+            },
+            {
+                "type": "paragraph",
+                "content": "I have an on-off relationship with Tumblr, one which is far more off than on. I like many aspects of the site, and am less than enthusiastic about others, while finding some hard to understand.\n\nOccasionally I post here, usually I don't. When I do, I'm not really sure what I'm doing or what's going on, but that might be the essence of Tumblr."
+            }
+        ]
+    },
+    "twitch": {
+        "header": "Twitch (D)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://www.twitch.tv/murdomaclachlan"
+            },
+            {
+                "type": "paragraph",
+                "content": "Sometimes I stream on Twitch! Primarily, I stream <a href=\"https://www.youtube.com/playlist?list=PLDxJw61Wisx9-C_wu2JT3GaVCZhcbrn93\">Hollow Knight</a>, but in the past I've also streamed <a href=\"https://www.youtube.com/playlist?list=PLDxJw61Wisx8ViAzv0xsu_En00cFrMvuU\">Dark Souls</a>, <a href=\"https://www.youtube.com/playlist?list=PLDxJw61Wisx-_MZRvboEjJ8D2jzhbLi6t\">Pharaoh: A New Era</a>, and even <a href=\"https://www.youtube.com/playlist?list=PLDxJw61Wisx_IBG7VGw4FN9rLuxQrUSQ3\">transcribing</a>!\n\nI intend to return to streaming and finish Hollow Knight, as with many things, once time permits. I also have a bucket list of games to play following that, with Dark Souls III up near the top. Streaming is genuinely one of my favourite things to do.\n\nFeel free to browse my past streams at my <a href=\"https://www.youtube.com/channel/UCvYC7NBRj77MRORgFVsD5nA/featured\">archive</a>."
+            }
+        ]
+    },
+    "twitter": {
+        "header": "Twitter (I)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://twitter.com/murdomaclachlan"
+            },
+            {
+                "type": "paragraph",
+                "content": "When I used Twitter, it was originally for political stuff. I didn't get much joy out of that use and had been wanting to go to a different, nicer website where I could talk about nicer things, for some time. Elon Musk's purchase of Twitter gave me the push I needed to join <a rel=\"me\" href=\"https://mastodon.online/@murdomaclachlan\">Mastodon</a> instead.\n\nMy Twitter account still exists, but I've deleted most of my tweets and I don't post there any more; I'm just on it to redirect to my Mastodon and keep my name reserved."
+            }
+        ]
+    },
+    "wattpad": {
+        "header": "Wattpad (I)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://www.wattpad.com/user/MurdoMaclachlan"
+            },
+            {
+                "type": "paragraph",
+                "content": "My Wattpad account dates back to the 23rd of February 2022, but I've never published anything on it and never use it these days. I'm not a fan fo the website in general and intend to move to sites like <a href=\"https://belletristica.com/en/users/14865-murdo-maclachlan#profile\">Belletristica</a> and <a href=\"https://movellas.com/movellian/MurdoMaclachlan\">Movellas</a>, so this account will most likely be deactivated."
+            }
+        ]
+    },
+    "wikipedia": {
+        "header": "Wikipedia (P)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://en.wikipedia.org/wiki/User:MurdoMaclachlan"
+            },
+            {
+                "type": "paragraph",
+                "content": "I don't do much editing on Wikipedia at the moment; I've tended to have a history of short burts of a few edits here and there, then nothing for ages. When I do edit, generally I do copyedits and cleanups, just to make pages look neater and better convey their information."
+            }
+        ]
+    },
+    "wordsmith": {
+        "header": "Wordsmith (D)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://wordsmith.social/murdomaclachlan/"
+            },
+            {
+                "type": "paragraph",
+                "content": "My Wordsmith account was intended to be my blog, but since my very first post I've found little time to write anything there. I would like to get back to it though; as such, I consider it dormant and not inactive."
+            }
+        ]
+    },
+    "youtube-archive": {
+        "header": "YouTube: Stream Archive (A)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://www.youtube.com/channel/UCvYC7NBRj77MRORgFVsD5nA/"
+            },
+            {
+                "type": "paragraph",
+                "content": "This YouTube account is an archive for all of my past <a href=\"https://www.twitch.tv/murdomaclachlan\">Twitch streams</a>. As an example, below is one of those streams:"
+            },
+            {
+                "type": "iframe",
+                "link": "https://www.youtube.com/embed/a7d0AV-5uGw",
+                "title": "YouTube video player"
+            }
+        ]
+    },
+    "youtube-main": {
+        "header": "YouTube: Primary (P)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://www.youtube.com/channel/UCFC6WprQlC7q2pwJEhaCPfA/"
+            },
+            {
+                "type": "paragraph",
+                "content": "The content on my primary YouTube account is fairly varied. So far I've uploaded mainly clips and highlights from my Twitch streams, but there is also a small amount of music, a mod comparison, and really anything that pops into my head. Below is an example of one of the highlights videos:"
+            },
+            {
+                "type": "iframe",
+                "link": "https://www.youtube.com/embed/OT0Kh_FxtGs",
+                "title": "YouTube video player"
+            }
+        ]
+    },
+    "youtube-sullivan": {
+        "header": "YouTube: The Records of Dr Sullivan (D)",
+        "elements": [
+            {
+                "type": "button",
+                "content": "https://www.youtube.com/channel/UCBJynIOEjCk7kVoycR1uyJQ/"
+            },
+            {
+                "type": "paragraph",
+                "content": "he Records of Dr Sullivan is a small voice acting project I started on a whim. The jist of it is a fairly basic SCP-narration account, and it only has 4 videos at the moment and has been dormant for quite some time. However, I'd love to get back to it at some point. I did start making a 5th video, but I was unsatisfied with the quality of both my narration and the editing, and choosing the next article is always hard when there are so many good ones. Regardless, here's an example:"
+            },
+            {
+                "type": "iframe",
+                "link": "https://www.youtube.com/embed/V2zPryMrZ-8",
+                "title": "YouTube video player"
+            }
+        ]
+    },
+    "template": {
+        "header": "",
+        "elements": [
+            {
+                "type": "button",
+                "content": ""
+            },
+            {
+                "type": "paragraph",
+                "content": ""
+            }
+        ]
+    }
+};
 var child_groups = {
     "hardlimit": false,
     "youtube": false,
@@ -7,9 +435,8 @@ var child_groups = {
 parse_json();
 
 async function parse_json() {
-    const json = await retrieve_json("../scripts/data/accounts.json");
-    for (i in json) {
-        let entry = json[i]
+    for (i in accountsJSON) {
+        let entry = accountsJSON[i]
         let content = "<h2>" + entry["header"] + "</h2>\n";
         for (j in entry["elements"]) {
             let element = entry["elements"][j];
@@ -35,11 +462,10 @@ async function parse_json() {
                     break;
             }
         }
-        accs[i] = content;
+        accounts[i] = content;
     }
-    console.log(accs);
 }
-
+/*
 async function retrieve_json(file, data = {}) {
     const response = await fetch(file, {
         method: 'POST',
@@ -53,12 +479,12 @@ async function retrieve_json(file, data = {}) {
     });
     const object = await response.json();
     return object;
-}
+}*/
 
 function toggle_account(trigger) {
     let account = trigger.id;
     let display = document.getElementById("account-description");
-    display.innerHTML = accs[account];
+    display.innerHTML = accounts[account];
 }
 
 function toggle_children(trigger) {
